Implement the initiated_unmount property for NautilusWindow.

Windows will have this set to TRUE when one of their slots
initiates an unmount.

https://bugzilla.gnome.org/show_bug.cgi?id=611569