libnautilus-private/nautilus-window-info.h
@@ -139,6 +139,10 @@ struct _NautilusWindowInfoIface
 	NautilusWindowSlotInfo * (* get_active_slot) (NautilusWindowInfo *window);
 	NautilusWindowSlotInfo * (* get_extra_slot)  (NautilusWindowInfo *window);
 
+	gboolean (* get_initiated_unmount) (NautilusWindowInfo *window);
+	void   (* set_initiated_unmount) (NautilusWindowInfo *window,
+					  gboolean initiated_unmount);
+
 	void   (* view_visible)        (NautilusWindowInfo *window,
 					NautilusView *view);
 	void   (* close_window)       (NautilusWindowInfo *window);
@@ -170,6 +174,9 @@ GList *                           nautilus_window_info_get_selection            
 NautilusWindowShowHiddenFilesMode nautilus_window_info_get_hidden_files_mode    (NautilusWindowInfo                *window);
 void                              nautilus_window_info_set_hidden_files_mode    (NautilusWindowInfo                *window,
 										 NautilusWindowShowHiddenFilesMode  mode);
+gboolean                          nautilus_window_info_get_initiated_unmount    (NautilusWindowInfo                *window);
+void                              nautilus_window_info_set_initiated_unmount    (NautilusWindowInfo                *window,
+										 gboolean initiated_unmount);
 GtkUIManager *                    nautilus_window_info_get_ui_manager           (NautilusWindowInfo                *window);
 
 G_END_DECLS
